--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla-app-template",
+  "name": "goit-advancedjs-hw-01",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -14,9 +14,12 @@
     "postcss-sort-media-queries": "^5.2.0",
     "vite": "^5.4.6"
   },
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Pichkorskiy Andrii",
   "license": "ISC",
   "dependencies": {
+    "izitoast": "^1.4.0",
+    "modern-normalize": "^3.0.1",
+    "simplelightbox": "^2.14.3",
     "vite-plugin-full-reload": "^1.2.0",
     "vite-plugin-html-inject": "^1.1.2"
   }
